❇️ JEKT-305     - Job        - JOB_MD_SHIP
🔁 Modified
    - Job
       - JOB_MD_BILL_DOC_HDR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -5042,8 +5042,37 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-03-30 16:54:04'
-    modifiedAt: '2023-03-30 16:56:57'
+    modifiedAt: '2023-04-13 02:25:44'
     author: jcovezd1@its.jnj.com
+  jobs/JOB_MD_SHIP:
+    name: JOB_MD_SHIP
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
+    - pipelines/SAP_01_MD_SHIP_MBP
+    - pipelines/SAP_01_MD_SHIP
+    - pipelines/JDE_01_MD_SHIP_MTK
+    - pipelines/SAP_01_MD_SHIP_FSN
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-13 02:26:24'
+    modifiedAt: '2023-04-13 02:36:55'
+    author: hgermi1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
