JEKT-1209 Target gem built 🔁 Modified     - Pipeline        - SAP_MD_MATL_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI     - Dataset        - MD_MATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -627,12 +627,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 16:16:52'
-    modifiedAt: '2023-04-13 07:26:13'
+    modifiedAt: '2023-04-13 07:32:33'
     datasets:
       inputs:
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_01
-      outputs: []
+      outputs:
+      - datasets/MD_MATL
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1781,7 +1782,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-13 07:32:02'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
