--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -80,14 +80,14 @@ schema:
       mappings: []
       tags: []
   - name: TOT_SHLF_LIF_DAYS_CNT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MIN_SHLF_RMN_LIF_DAYS_CNT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -108,7 +108,7 @@ schema:
       mappings: []
       tags: []
   - name: NET_WT_MEAS
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -227,7 +227,7 @@ schema:
       mappings: []
       tags: []
   - name: GRS_WT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -388,7 +388,7 @@ schema:
       mappings: []
       tags: []
   - name: VOL
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
