JEKT-1209 MBP created ❇️ New     - Pipeline        - SAP_MD_MATL_MBP     - Dataset        - DS_SAP_MARA_MBP
🔁 Modified
    - Pipeline
       - SAP_MD_MATL_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
    - Dataset
       - MD_MATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -627,11 +627,28 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 16:16:52'
-    modifiedAt: '2023-04-13 08:09:11'
+    modifiedAt: '2023-04-13 09:29:45'
     datasets:
       inputs:
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_01
+      outputs:
+      - datasets/MD_MATL
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_MD_MATL_MBP:
+    name: SAP_MD_MATL_MBP
+    description: MD Material for SAP systems with matching L0 schema and mapping
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-13 09:39:22'
+    modifiedAt: '2023-04-13 09:45:21'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_MAKT_01
+      - datasets/DS_SAP_MARA_MBP
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -1782,7 +1799,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 08:09:11'
+    modifiedAt: '2023-04-13 09:45:21'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4012,6 +4029,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-04-12 16:33:53'
         modifiedAt: '2023-04-12 16:33:53'
+  datasets/DS_SAP_MARA_MBP:
+    name: DS_SAP_MARA_MBP
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-13 09:44:25'
+    modifiedAt: '2023-04-13 09:44:25'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-13 09:44:25'
+        modifiedAt: '2023-04-13 09:44:25'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
