JEKT-1210 -job creation and unit tests ❇️ New     - Job        - JON_MD_MATL_MVMT_HDR
🔁 Modified
    - Pipeline
       - JDE_MD_MATL_MVMT_HDR_GMD
       - JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET_JSW
       - SAP_MD_MATL_MVMT_HDR
       - JDE_MD_MATL_MVMT_HDR_BW2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -627,7 +627,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 09:40:18'
-    modifiedAt: '2023-04-13 08:11:25'
+    modifiedAt: '2023-04-13 10:17:52'
     datasets:
       inputs:
       - datasets/DS_SAP_MKPF
@@ -643,7 +643,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 08:12:53'
-    modifiedAt: '2023-04-13 09:40:30'
+    modifiedAt: '2023-04-13 10:14:49'
     datasets:
       inputs:
       - datasets/DS_JDE_F0005
@@ -660,7 +660,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 09:13:04'
-    modifiedAt: '2023-04-13 09:43:27'
+    modifiedAt: '2023-04-13 10:13:05'
     datasets:
       inputs:
       - datasets/DS_JDE_F0005
@@ -677,7 +677,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 09:44:10'
-    modifiedAt: '2023-04-13 09:46:41'
+    modifiedAt: '2023-04-13 10:11:04'
     datasets:
       inputs:
       - datasets/DS_JDE_F0005
@@ -4969,6 +4969,34 @@ jobs:
     createdAt: '2023-03-30 16:54:04'
     modifiedAt: '2023-03-30 16:56:57'
     author: jcovezd1@its.jnj.com
+  jobs/JON_MD_MATL_MVMT_HDR:
+    name: JON_MD_MATL_MVMT_HDR
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/JDE_MD_MATL_MVMT_HDR_BW2
+    - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
+    - pipelines/JDE_MD_MATL_MVMT_HDR_GMD
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-13 10:18:29'
+    modifiedAt: '2023-04-13 10:24:25'
+    author: ggrilo1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
