--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -23,6 +23,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: BRND_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: FRANCHISE_CD
     type: string
     nullable: true
