--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -644,11 +644,28 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 09:39:22'
-    modifiedAt: '2023-04-13 09:45:21'
+    modifiedAt: '2023-04-13 09:46:16'
     datasets:
       inputs:
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_MBP
+      outputs:
+      - datasets/MD_MATL
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_MD_MATL_BBA_BBN:
+    name: SAP_MD_MATL_BBA_BBN
+    description: MD Material for SAP systems with matching L0 schema and mapping
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-13 10:34:33'
+    modifiedAt: '2023-04-13 10:40:45'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_MAKT_01
+      - datasets/DS_SAP_MARA_BBA_BBN
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -1799,7 +1816,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 09:45:21'
+    modifiedAt: '2023-04-13 10:35:47'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4044,6 +4061,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-04-13 09:44:25'
         modifiedAt: '2023-04-13 09:44:25'
+  datasets/DS_SAP_MARA_BBA_BBN:
+    name: DS_SAP_MARA_BBA_BBN
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-13 10:37:06'
+    modifiedAt: '2023-04-13 10:37:07'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-13 10:37:07'
+        modifiedAt: '2023-04-13 10:37:07'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
