JEKT_136 ❇️ New     - Dataset        - DS_SAP_BBA_VBAP
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_ORDR_LINE_bba

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1324,7 +1324,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 17:35:52'
-    modifiedAt: '2023-04-12 22:56:33'
+    modifiedAt: '2023-04-13 11:03:12'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1338,8 +1338,8 @@ pipelines:
       - datasets/DS_SAP_01_TVSTT
       - datasets/DS_SAP_02_TVST
       - datasets/DS_SAP_02_VBAK
-      - datasets/DS_SAP_02_VBAP
       - datasets/DS_SAP_02_VBKD
+      - datasets/DS_SAP_BBA_VBAP
       outputs:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
@@ -7558,6 +7558,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-13 10:49:44'
         modifiedAt: '2023-04-13 10:49:44'
+  datasets/DS_SAP_BBA_VBAP:
+    name: DS_SAP_BBA_VBAP
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-13 11:03:07'
+    modifiedAt: '2023-04-13 11:03:07'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-13 11:03:07'
+        modifiedAt: '2023-04-13 11:03:07'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
