JEKET-136 ❇️ New     - Dataset        - DS_SAP_HCS_VBAP        - DS_SAP_TVM4T_HCS     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE_hcs
🔁 Modified
    - Dataset
       - MD_SLS_ORDR_LINE
       - DS_SAP_01_TVM2T

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1452,6 +1452,35 @@ pipelines:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_SLS_ORDR_LINE_hcs:
+    name: SAP_01_MD_SLS_ORDR_LINE_hcs
+    description: ''
+    author: fsano1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-13 11:05:00'
+    modifiedAt: '2023-04-13 11:25:59'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_TVAGT
+      - datasets/DS_SAP_01_TVAPT
+      - datasets/DS_SAP_01_TVM1T
+      - datasets/DS_SAP_01_TVM2T
+      - datasets/DS_SAP_01_TVM3T
+      - datasets/DS_SAP_01_TVM5T
+      - datasets/DS_SAP_01_TVRO
+      - datasets/DS_SAP_01_TVROT
+      - datasets/DS_SAP_01_TVSTT
+      - datasets/DS_SAP_02_TVST
+      - datasets/DS_SAP_02_VBAK
+      - datasets/DS_SAP_02_VBKD
+      - datasets/DS_SAP_HCS_VBAP
+      - datasets/DS_SAP_TVM4T_HCS
+      outputs:
+      - datasets/MD_SLS_ORDR_LINE
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -2043,7 +2072,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 10:55:00'
+    modifiedAt: '2023-04-13 11:25:59'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7293,7 +7322,7 @@ datasets:
     description: ''
     author: fsano1@its.jnj.com
     createdAt: '2023-03-21 18:29:41'
-    modifiedAt: '2023-04-12 18:23:04'
+    modifiedAt: '2023-04-13 11:18:24'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7573,6 +7602,36 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-13 11:03:07'
         modifiedAt: '2023-04-13 11:03:07'
+  datasets/DS_SAP_HCS_VBAP:
+    name: DS_SAP_HCS_VBAP
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-13 11:09:50'
+    modifiedAt: '2023-04-13 11:09:50'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-13 11:09:50'
+        modifiedAt: '2023-04-13 11:09:50'
+  datasets/DS_SAP_TVM4T_HCS:
+    name: DS_SAP_TVM4T_HCS
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-13 11:20:48'
+    modifiedAt: '2023-04-13 11:20:48'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-13 11:20:48'
+        modifiedAt: '2023-04-13 11:20:48'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
