--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1279,7 +1279,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-20 12:41:02'
-    modifiedAt: '2023-04-12 22:23:12'
+    modifiedAt: '2023-04-13 11:39:08'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1293,8 +1293,8 @@ pipelines:
       - datasets/DS_SAP_01_TVST
       - datasets/DS_SAP_01_TVSTT
       - datasets/DS_SAP_01_VBAK
-      - datasets/DS_SAP_01_VBAP
       - datasets/DS_SAP_01_VBKD
+      - datasets/DS_SAP_BBL_VBAP
       outputs:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
@@ -2072,7 +2072,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 11:32:59'
+    modifiedAt: '2023-04-13 11:39:07'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7632,6 +7632,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-13 11:20:48'
         modifiedAt: '2023-04-13 11:20:48'
+  datasets/DS_SAP_BBL_VBAP:
+    name: DS_SAP_BBL_VBAP
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-13 11:38:57'
+    modifiedAt: '2023-04-13 11:38:57'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-13 11:38:57'
+        modifiedAt: '2023-04-13 11:38:57'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
