JEKT-136 ❇️ New     - Pipeline        - MD_SLS_ORDR_LINE_MBP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1481,6 +1481,34 @@ pipelines:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
     dependencies: {}
+  pipelines/MD_SLS_ORDR_LINE_MBP:
+    name: MD_SLS_ORDR_LINE_MBP
+    description: ''
+    author: fsano1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-13 11:41:32'
+    modifiedAt: '2023-04-13 11:54:13'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_TVAGT
+      - datasets/DS_SAP_01_TVAPT
+      - datasets/DS_SAP_01_TVM1T
+      - datasets/DS_SAP_01_TVM2T
+      - datasets/DS_SAP_01_TVM3T
+      - datasets/DS_SAP_01_TVM5T
+      - datasets/DS_SAP_01_TVRO
+      - datasets/DS_SAP_01_TVROT
+      - datasets/DS_SAP_01_TVST
+      - datasets/DS_SAP_01_TVSTT
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBKD
+      - datasets/DS_SAP_BBL_VBAP
+      outputs:
+      - datasets/MD_SLS_ORDR_LINE
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
