--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1489,7 +1489,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 11:41:32'
-    modifiedAt: '2023-04-13 11:54:13'
+    modifiedAt: '2023-04-13 12:00:39'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1504,7 +1504,7 @@ pipelines:
       - datasets/DS_SAP_01_TVSTT
       - datasets/DS_SAP_01_VBAK
       - datasets/DS_SAP_01_VBKD
-      - datasets/DS_SAP_BBL_VBAP
+      - datasets/DS_SAP_MBP_VBAP
       outputs:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
@@ -2100,7 +2100,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 11:39:07'
+    modifiedAt: '2023-04-13 12:00:39'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7675,6 +7675,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-13 11:38:57'
         modifiedAt: '2023-04-13 11:38:57'
+  datasets/DS_SAP_MBP_VBAP:
+    name: DS_SAP_MBP_VBAP
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-13 11:55:31'
+    modifiedAt: '2023-04-13 11:55:31'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-13 11:55:31'
+        modifiedAt: '2023-04-13 11:55:31'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
