JEKT-136 ❇️ New     - Dataset        - DS_SAP_FSN_VBAP
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_ORDR_LINE_FSN

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1402,7 +1402,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 21:13:29'
-    modifiedAt: '2023-04-12 21:55:06'
+    modifiedAt: '2023-04-13 12:47:51'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1416,8 +1416,8 @@ pipelines:
       - datasets/DS_SAP_01_TVST
       - datasets/DS_SAP_01_TVSTT
       - datasets/DS_SAP_01_VBAK
-      - datasets/DS_SAP_01_VBAP
       - datasets/DS_SAP_01_VBKD
+      - datasets/DS_SAP_FSN_VBAP
       - datasets/DS_SAP_TVM4T
       outputs:
       - datasets/MD_SLS_ORDR_LINE
@@ -7690,6 +7690,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-13 11:55:31'
         modifiedAt: '2023-04-13 11:55:31'
+  datasets/DS_SAP_FSN_VBAP:
+    name: DS_SAP_FSN_VBAP
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-13 12:47:47'
+    modifiedAt: '2023-04-13 12:47:47'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-13 12:47:47'
+        modifiedAt: '2023-04-13 12:47:47'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
