JEKT-246 🔁 Modified     - Pipeline        - JDE_01_F0401_DEU_JEM_JSW_SJD     - Dataset        - DS_JDE_01_F0401        - DS_JDE_01_F0101        - MD_SUP_PRCHSNG_ORG

--- a/src/datasets/MD_SUP_PRCHSNG_ORG/pbt_aspects.yml
+++ b/src/datasets/MD_SUP_PRCHSNG_ORG/pbt_aspects.yml
@@ -18,7 +18,7 @@ schema:
       tags: []
   - name: PRCHSNG_ORG_NUM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -31,14 +31,14 @@ schema:
       mappings: []
       tags: []
   - name: PRCH_BLK_IND
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DEL_IND
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
