JEKT-136 ❇️ New     - Dataset        - DS_SAP_MRS_TVM4T
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_ORDR_LINE_mrs
    - Dataset
       - MD_SLS_ORDR_LINE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1517,7 +1517,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 12:59:08'
-    modifiedAt: '2023-04-13 13:13:50'
+    modifiedAt: '2023-04-13 13:50:53'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1532,6 +1532,7 @@ pipelines:
       - datasets/DS_SAP_02_TVST
       - datasets/DS_SAP_02_VBAK
       - datasets/DS_SAP_02_VBKD
+      - datasets/DS_SAP_MRS_TVM4T
       - datasets/DS_SAP_MRS_VBAP
       outputs:
       - datasets/MD_SLS_ORDR_LINE
@@ -2128,7 +2129,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 12:00:39'
+    modifiedAt: '2023-04-13 13:50:52'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7748,6 +7749,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-13 12:53:59'
         modifiedAt: '2023-04-13 12:53:59'
+  datasets/DS_SAP_MRS_TVM4T:
+    name: DS_SAP_MRS_TVM4T
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-13 13:20:05'
+    modifiedAt: '2023-04-13 13:20:05'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-13 13:20:05'
+        modifiedAt: '2023-04-13 13:20:05'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
