--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1538,6 +1538,35 @@ pipelines:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_SLS_ORDR_LINE_svs:
+    name: SAP_01_MD_SLS_ORDR_LINE_svs
+    description: ''
+    author: fsano1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-13 13:58:48'
+    modifiedAt: '2023-04-13 14:17:42'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_TVAGT
+      - datasets/DS_SAP_01_TVAPT
+      - datasets/DS_SAP_01_TVM1T
+      - datasets/DS_SAP_01_TVM2T
+      - datasets/DS_SAP_01_TVM3T
+      - datasets/DS_SAP_01_TVM5T
+      - datasets/DS_SAP_01_TVRO
+      - datasets/DS_SAP_01_TVROT
+      - datasets/DS_SAP_01_TVSTT
+      - datasets/DS_SAP_02_TVST
+      - datasets/DS_SAP_02_VBAK
+      - datasets/DS_SAP_02_VBKD
+      - datasets/DS_SAP_SVS_VBAP
+      - datasets/DS_SAP_TVM4T_HCS
+      outputs:
+      - datasets/MD_SLS_ORDR_LINE
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -2129,7 +2158,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 13:50:52'
+    modifiedAt: '2023-04-13 14:17:42'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7764,6 +7793,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-13 13:20:05'
         modifiedAt: '2023-04-13 13:20:05'
+  datasets/DS_SAP_SVS_VBAP:
+    name: DS_SAP_SVS_VBAP
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-13 14:01:51'
+    modifiedAt: '2023-04-13 14:01:51'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-13 14:01:51'
+        modifiedAt: '2023-04-13 14:01:51'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
