--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1567,6 +1567,35 @@ pipelines:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_SLS_ORDR_LINE_P01:
+    name: SAP_01_MD_SLS_ORDR_LINE_P01
+    description: ''
+    author: fsano1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-13 14:23:26'
+    modifiedAt: '2023-04-13 14:23:48'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_TVAGT
+      - datasets/DS_SAP_01_TVAPT
+      - datasets/DS_SAP_01_TVM1T
+      - datasets/DS_SAP_01_TVM2T
+      - datasets/DS_SAP_01_TVM3T
+      - datasets/DS_SAP_01_TVM5T
+      - datasets/DS_SAP_01_TVRO
+      - datasets/DS_SAP_01_TVROT
+      - datasets/DS_SAP_01_TVSTT
+      - datasets/DS_SAP_02_TVST
+      - datasets/DS_SAP_02_VBAK
+      - datasets/DS_SAP_02_VBKD
+      - datasets/DS_SAP_SVS_VBAP
+      - datasets/DS_SAP_TVM4T_HCS
+      outputs:
+      - datasets/MD_SLS_ORDR_LINE
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
