JEKT-136 ❇️ New     - Dataset        - DS_SAP_P01_VBAP
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_ORDR_LINE_P01

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1574,8 +1574,8 @@ pipelines:
     mode: batch
     artefactID: ''
     language: python
-    createdAt: '2023-04-13 14:23:26'
-    modifiedAt: '2023-04-13 14:23:48'
+    createdAt: '2023-04-13 14:39:44'
+    modifiedAt: '2023-04-13 14:49:22'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1590,7 +1590,7 @@ pipelines:
       - datasets/DS_SAP_02_TVST
       - datasets/DS_SAP_02_VBAK
       - datasets/DS_SAP_02_VBKD
-      - datasets/DS_SAP_SVS_VBAP
+      - datasets/DS_SAP_P01_VBAP
       - datasets/DS_SAP_TVM4T_HCS
       outputs:
       - datasets/MD_SLS_ORDR_LINE
@@ -7837,6 +7837,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-13 14:01:51'
         modifiedAt: '2023-04-13 14:01:51'
+  datasets/DS_SAP_P01_VBAP:
+    name: DS_SAP_P01_VBAP
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-13 14:49:02'
+    modifiedAt: '2023-04-13 14:49:02'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-13 14:49:02'
+        modifiedAt: '2023-04-13 14:49:02'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
