--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -627,13 +627,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-11 14:37:19'
-    modifiedAt: '2023-04-12 15:39:30'
+    modifiedAt: '2023-04-13 14:49:27'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4211
       - datasets/DS_JDE_01_F43121
       outputs:
-      - datasets/JDE_MD_DELV_LINE
+      - datasets/MD_DELV_LINE
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1212,7 +1212,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-07 17:23:20'
+    modifiedAt: '2023-04-13 14:49:27'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4012,21 +4012,6 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-04-11 15:13:11'
         modifiedAt: '2023-04-11 15:13:11'
-  datasets/JDE_MD_DELV_LINE:
-    name: JDE_MD_DELV_LINE
-    description: ''
-    author: jcovezd1@its.jnj.com
-    createdAt: '2023-04-12 13:45:30'
-    modifiedAt: '2023-04-12 13:45:30'
-    mode: batch
-    physicalDatasets:
-      CDL_L1_Dev:
-        fabricId: 32
-        datasetType: Database
-        description: ''
-        author: jcovezd1@its.jnj.com
-        createdAt: '2023-04-12 13:45:30'
-        modifiedAt: '2023-04-12 13:45:30'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
