JEKT-136 ❇️ New     - Dataset        - DS_SAP_TAI_VBAP     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE_TAI
🔁 Modified
    - Dataset
       - MD_SLS_ORDR_LINE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1596,6 +1596,35 @@ pipelines:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_SLS_ORDR_LINE_TAI:
+    name: SAP_01_MD_SLS_ORDR_LINE_TAI
+    description: ''
+    author: fsano1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-13 14:57:09'
+    modifiedAt: '2023-04-13 15:04:55'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_TVAGT
+      - datasets/DS_SAP_01_TVAPT
+      - datasets/DS_SAP_01_TVM1T
+      - datasets/DS_SAP_01_TVM2T
+      - datasets/DS_SAP_01_TVM3T
+      - datasets/DS_SAP_01_TVM5T
+      - datasets/DS_SAP_01_TVRO
+      - datasets/DS_SAP_01_TVROT
+      - datasets/DS_SAP_01_TVSTT
+      - datasets/DS_SAP_02_TVST
+      - datasets/DS_SAP_02_VBAK
+      - datasets/DS_SAP_02_VBKD
+      - datasets/DS_SAP_TAI_VBAP
+      - datasets/DS_SAP_TVM4T_HCS
+      outputs:
+      - datasets/MD_SLS_ORDR_LINE
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -2187,7 +2216,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 14:53:38'
+    modifiedAt: '2023-04-13 15:04:54'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7852,6 +7881,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-13 14:49:02'
         modifiedAt: '2023-04-13 14:49:02'
+  datasets/DS_SAP_TAI_VBAP:
+    name: DS_SAP_TAI_VBAP
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-13 15:00:48'
+    modifiedAt: '2023-04-13 15:00:48'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-13 15:00:48'
+        modifiedAt: '2023-04-13 15:00:48'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
