JEKT-136 ❇️ New     - Dataset        - DS_SAP_BWI_VBAP
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_ORDR_LINE_bwi
    - Dataset
       - MD_SLS_ORDR_LINE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1379,7 +1379,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 19:46:41'
-    modifiedAt: '2023-04-12 21:06:36'
+    modifiedAt: '2023-04-13 15:08:17'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1388,8 +1388,8 @@ pipelines:
       - datasets/DS_SAP_01_TVROT
       - datasets/DS_SAP_01_TVSTT
       - datasets/DS_SAP_01_VBAK
-      - datasets/DS_SAP_01_VBAP
       - datasets/DS_SAP_01_VBKD
+      - datasets/DS_SAP_BWI_VBAP
       outputs:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
@@ -2216,7 +2216,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 15:04:54'
+    modifiedAt: '2023-04-13 15:08:16'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7896,6 +7896,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-13 15:00:48'
         modifiedAt: '2023-04-13 15:00:48'
+  datasets/DS_SAP_BWI_VBAP:
+    name: DS_SAP_BWI_VBAP
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-13 15:08:01'
+    modifiedAt: '2023-04-13 15:08:01'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-13 15:08:01'
+        modifiedAt: '2023-04-13 15:08:01'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
