JEKT-136 ❇️ New     - Dataset        - DS_SAP_BBN_VBAP
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_ORDR_LINE_bbn

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1352,7 +1352,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 18:36:10'
-    modifiedAt: '2023-04-12 23:09:52'
+    modifiedAt: '2023-04-13 15:12:17'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1366,7 +1366,7 @@ pipelines:
       - datasets/DS_SAP_01_TVSTT
       - datasets/DS_SAP_01_VBKD
       - datasets/DS_SAP_03_VBAK
-      - datasets/DS_SAP_03_VBAP
+      - datasets/DS_SAP_BBN_VBAP
       outputs:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
@@ -7911,6 +7911,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-13 15:08:01'
         modifiedAt: '2023-04-13 15:08:01'
+  datasets/DS_SAP_BBN_VBAP:
+    name: DS_SAP_BBN_VBAP
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-13 15:12:11'
+    modifiedAt: '2023-04-13 15:12:11'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-13 15:12:11'
+        modifiedAt: '2023-04-13 15:12:11'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
