--- a/src/datasets/MD_MATL_INV/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_INV/pbt_aspects.yml
@@ -18,7 +18,7 @@ schema:
       tags: []
   - name: MATL_NUM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -46,7 +46,7 @@ schema:
       tags: []
   - name: BTCH_STS_CD
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -60,7 +60,7 @@ schema:
       tags: []
   - name: PRTY_NUM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -93,27 +93,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: BLCKD_STCK
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RTRNS
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: BASE_UOM_CD
     type: string
     nullable: true
@@ -121,36 +100,8 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: STO_IN_TRNST_QTY
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PLNT_IN_TRNST_QTY
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FISC_YR_OF_CUR_PER
-    type: integer
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CUR_PER
-    type: integer
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: SHRT_MATL_NUM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
