--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -627,9 +627,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 16:16:52'
-    modifiedAt: '2023-04-13 11:07:57'
+    modifiedAt: '2023-04-13 15:55:35'
     datasets:
       inputs:
+      - datasets/DS_SAP_AUSP_01
+      - datasets/DS_SAP_CABN_01
+      - datasets/DS_SAP_INOB_01
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_01
       outputs:
@@ -661,7 +664,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 10:34:33'
-    modifiedAt: '2023-04-13 11:03:35'
+    modifiedAt: '2023-04-13 11:44:53'
     datasets:
       inputs:
       - datasets/DS_SAP_MAKT_01
@@ -4076,6 +4079,51 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-04-13 10:37:07'
         modifiedAt: '2023-04-13 10:37:07'
+  datasets/DS_SAP_AUSP_01:
+    name: DS_SAP_AUSP_01
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-13 15:51:47'
+    modifiedAt: '2023-04-13 15:51:47'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-13 15:51:47'
+        modifiedAt: '2023-04-13 15:51:47'
+  datasets/DS_SAP_INOB_01:
+    name: DS_SAP_INOB_01
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-13 15:53:58'
+    modifiedAt: '2023-04-13 15:53:58'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-13 15:53:58'
+        modifiedAt: '2023-04-13 15:53:58'
+  datasets/DS_SAP_CABN_01:
+    name: DS_SAP_CABN_01
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-13 15:55:30'
+    modifiedAt: '2023-04-13 15:55:30'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-13 15:55:30'
+        modifiedAt: '2023-04-13 15:55:30'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
