JEKT-1209 Re-created as duplicate to leverage characteristics from other pipeline 🔁 Modified     - Pipeline        - SAP_MD_MATL_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI        - SAP_MD_MATL_BBA_BBN

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -627,7 +627,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 16:16:52'
-    modifiedAt: '2023-04-13 16:53:21'
+    modifiedAt: '2023-04-13 16:58:50'
     datasets:
       inputs:
       - datasets/DS_SAP_AUSP_01
@@ -663,12 +663,15 @@ pipelines:
     mode: batch
     artefactID: ''
     language: python
-    createdAt: '2023-04-13 10:34:33'
-    modifiedAt: '2023-04-13 11:44:53'
+    createdAt: '2023-04-13 17:23:55'
+    modifiedAt: '2023-04-13 17:26:50'
     datasets:
       inputs:
+      - datasets/DS_SAP_AUSP_01
+      - datasets/DS_SAP_CABN_01
+      - datasets/DS_SAP_INOB_01
       - datasets/DS_SAP_MAKT_01
-      - datasets/DS_SAP_MARA_BBA_BBN
+      - datasets/DS_SAP_MARA_01
       outputs:
       - datasets/MD_MATL
     subgraphs: []
