JEKT-1209 Replaced source gem as it was from other pipeline 🔁 Modified     - Pipeline        - SAP_MD_MATL_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI        - SAP_MD_MATL_BBA_BBN     - Dataset        - MD_MATL

--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -184,6 +184,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_SPEC_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_SPEC_VERS_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: CHG_BY
     type: string
     nullable: true
