--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -627,7 +627,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 16:16:52'
-    modifiedAt: '2023-04-13 17:59:43'
+    modifiedAt: '2023-04-13 18:00:54'
     datasets:
       inputs:
       - datasets/DS_SAP_MAKT_01
@@ -661,14 +661,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 17:23:55'
-    modifiedAt: '2023-04-13 17:56:00'
+    modifiedAt: '2023-04-13 18:19:49'
     datasets:
       inputs:
       - datasets/DS_SAP_AUSP_01
       - datasets/DS_SAP_CABN_01
       - datasets/DS_SAP_INOB_01
       - datasets/DS_SAP_MAKT_01
-      - datasets/DS_SAP_MARA_01
+      - datasets/DS_SAP_MARA_BBA_BBN
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -1819,7 +1819,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 17:59:42'
+    modifiedAt: '2023-04-13 18:16:29'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
