JEKT-296 🔁 Modified     - Pipeline        - JDE_01_MD_PO_SCHED_LINE_DELV_JES_JEM_JET_JSW_MTR_SJD_DEU        - DART_L1_Purchase_Order_MD_PO_HIST     - Dataset        - MD_PO_HIST        - DS_SAP_01_EBKE

--- a/src/datasets/MD_PO_HIST/pbt_aspects.yml
+++ b/src/datasets/MD_PO_HIST/pbt_aspects.yml
@@ -473,14 +473,14 @@ schema:
       tags: []
   - name: DELV_ITM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -494,42 +494,42 @@ schema:
       tags: []
   - name: EXCH_RT
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MLT_ACCT_ASGNMT
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PSTD_SCTY_RETN_AMT
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PSTD_RETN_AMT_IN_DOC_CRNCY
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RETN_AMT_IN_CO_CD_CRNCY
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RETN_AMT_IN_DOC_CRNCY
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
