--- a/src/datasets/MD_DELV_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_DELV_LINE/pbt_aspects.yml
@@ -240,6 +240,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: NUM_OF_CNTNRS_CNT
+    type: integer
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: ORDR_BILL_STS_CD
     type: string
     nullable: true
