revert  switching to trigger words

--- a/automation_pipelines.yaml
+++ b/automation_pipelines.yaml
@@ -3,7 +3,7 @@
     jenkinsType: dev              # EAT Jenkins Type. Supported values: dev, release
     environment: Production       # Automation Pipelines execution environment. Supported values: Production, Beta
     triggerFrom:                                              # Will trigger on indicated branch[es]
-       - eventType: commit                                # handles pullRequest open, updated, and reopened events from source branch
+       - eventType: pullRequest                                # handles pullRequest open, updated, and reopened events from source branch
          branches:
            - feature/* # branch name (accepts RegEx or Wildcards)
        - eventType: commit                                # handles pullRequest open, updated, and reopened events from source branch
