--- a/src/datasets/DS_SAP_003_MSLB/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_003_MSLB/pbt_aspects.yml
@@ -2,191 +2,198 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: SRC_SYS_CD
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SRC_TBL_NM
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_NUM
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PLNT_CD
+  - name: WERKS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SLOC_CD
+  - name: SOBKZ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BTCH_NUM
+  - name: MATNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BTCH_STS_CD
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SPCL_STCK_IND
+  - name: MANDT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PRTY_NUM
+  - name: LIFNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: UNRSTRCTD_STCK
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: IN_TRNSFR_STCK
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: QLTY_INSP_STCK
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RSTRCTD_STCK
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BLCKD_STCK
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RTRNS
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BASE_UOM_CD
+  - name: CHARG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: STO_IN_TRNST_QTY
-    type: decimal(18,4)
+  - name: LFGJA
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PLNT_IN_TRNST_QTY
-    type: decimal(18,4)
+  - name: LFMON
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FISC_YR_OF_CUR_PER
-    type: integer
+  - name: LBSPR
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CUR_PER
-    type: integer
+  - name: LBLAB
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SHRT_MATL_NUM
-    type: void
+  - name: LBINS
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_ETL_ID
-    type: integer
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DAI_CRT_DTTM
-    type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DAI_UPDT_DTTM
-    type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l0_upt_
-    type: timestamp
+  - name: LBVLA
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l1_upt_
-    type: timestamp
-    nullable: false
+  - name: LBVIN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBILL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBILQ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBVLL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBVLQ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBFLL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBFLQ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBDLL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBEIN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBVEI
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ERSDA
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBJIN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBRUE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LBUML
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SGT_SCAT
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -198,16 +205,37 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _pk_md5_
-    type: string
+  - name: _upt_
+    type: timestamp
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
+  - name: _kafkaOffset_
+    type: long
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _createTime_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _kafkaTimestamp_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _infa_bigint_sequence_
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
