--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1404,6 +1404,26 @@ pipelines:
       - datasets/STRCT_MES_MD_PROD_RVSN_BASE
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MATL_INV_BWI:
+    name: SAP_MD_MATL_INV_BWI
+    description: SAP_MD_MATL_INV 4 Tables
+    author: ypatel8@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-13 20:25:11'
+    modifiedAt: '2023-04-13 22:16:50'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_001_MARD
+      - datasets/DS_SAP_003_MCHB
+      - datasets/DS_SAP_003_MSLB
+      - datasets/DS_SAP_004_MSSL
+      - datasets/DS_SAP_005_MARA
+      outputs:
+      - datasets/MD_MATL_INV
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -2610,7 +2630,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 15:26:12'
+    modifiedAt: '2023-04-13 20:32:09'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7420,6 +7440,81 @@ datasets:
         author: skostadi@its.jnj.com
         createdAt: '2023-03-20 18:20:04'
         modifiedAt: '2023-03-20 18:20:04'
+  datasets/DS_SAP_001_MARD:
+    name: DS_SAP_001_MARD
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-13 21:52:42'
+    modifiedAt: '2023-04-13 21:52:43'
+    mode: batch
+    physicalDatasets:
+      dev_ajp_nonprod:
+        fabricId: 4
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-13 21:52:42'
+        modifiedAt: '2023-04-13 21:52:42'
+  datasets/DS_SAP_005_MARA:
+    name: DS_SAP_005_MARA
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-13 21:58:28'
+    modifiedAt: '2023-04-13 21:58:28'
+    mode: batch
+    physicalDatasets:
+      dev_ajp_nonprod:
+        fabricId: 4
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-13 21:58:28'
+        modifiedAt: '2023-04-13 21:58:28'
+  datasets/DS_SAP_003_MCHB:
+    name: DS_SAP_003_MCHB
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-13 22:03:10'
+    modifiedAt: '2023-04-13 22:03:10'
+    mode: batch
+    physicalDatasets:
+      dev_ajp_nonprod:
+        fabricId: 4
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-13 22:03:10'
+        modifiedAt: '2023-04-13 22:03:10'
+  datasets/DS_SAP_003_MSLB:
+    name: DS_SAP_003_MSLB
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-13 22:07:40'
+    modifiedAt: '2023-04-13 22:07:40'
+    mode: batch
+    physicalDatasets:
+      dev_ajp_nonprod:
+        fabricId: 4
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-13 22:07:40'
+        modifiedAt: '2023-04-13 22:07:40'
+  datasets/DS_SAP_004_MSSL:
+    name: DS_SAP_004_MSSL
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-13 22:12:10'
+    modifiedAt: '2023-04-13 22:12:10'
+    mode: batch
+    physicalDatasets:
+      dev_ajp_nonprod:
+        fabricId: 4
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-13 22:12:10'
+        modifiedAt: '2023-04-13 22:12:10'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
@@ -8249,17 +8344,18 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
-    - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
+    - pipelines/SAP_MD_MATL_INV_BWI
     - pipelines/SAP_MD_MATL_INV_MBP
-    - pipelines/JDE_01_MD_MATL_INV
     - pipelines/SAP_MD_MATL_INV_P01
+    - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
+    - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: false
     createdAt: '2023-04-04 14:54:35'
-    modifiedAt: '2023-04-12 21:08:52'
+    modifiedAt: '2023-04-13 22:20:08'
     author: natkins7@its.jnj.com
   jobs/JOB_MD_MATL_BOM:
     name: JOB_MD_MATL_BOM
