JEKT-1209 Added in T134T lookup and all the required gems for that ❇️ New     - Dataset        - DS_SAP_T134T_BBA_BBL_BBN
🔁 Modified
    - Pipeline
       - SAP_MD_MATL_BBA_BBN

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -661,7 +661,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 17:23:55'
-    modifiedAt: '2023-04-14 07:36:27'
+    modifiedAt: '2023-04-14 09:40:38'
     datasets:
       inputs:
       - datasets/DS_SAP_AUSP_01
@@ -669,6 +669,7 @@ pipelines:
       - datasets/DS_SAP_INOB_01
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_BBA_BBN
+      - datasets/DS_SAP_T134T_BBA_BBL_BBN
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -4124,6 +4125,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-04-13 15:55:30'
         modifiedAt: '2023-04-13 15:55:30'
+  datasets/DS_SAP_T134T_BBA_BBL_BBN:
+    name: DS_SAP_T134T_BBA_BBL_BBN
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-14 09:33:32'
+    modifiedAt: '2023-04-14 09:40:37'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-14 09:33:32'
+        modifiedAt: '2023-04-14 09:33:32'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
