JEKT-1209 Updated SELECT fields gem 🔁 Modified     - Pipeline        - SAP_MD_MATL_BBA_BBN     - Dataset        - MD_MATL

--- a/src/datasets/MD_MATL/pbt_aspects.yml
+++ b/src/datasets/MD_MATL/pbt_aspects.yml
@@ -499,3 +499,10 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_TYPE_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
