JEKT-1209 New BBL Pipeline created ❇️ New     - Pipeline        - SAP_MD_MATL_BBL
🔁 Modified
    - Pipeline
       - SAP_MD_MATL_BBA_BBN

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -661,7 +661,28 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 17:23:55'
-    modifiedAt: '2023-04-14 09:42:02'
+    modifiedAt: '2023-04-14 10:22:26'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_AUSP_01
+      - datasets/DS_SAP_CABN_01
+      - datasets/DS_SAP_INOB_01
+      - datasets/DS_SAP_MAKT_01
+      - datasets/DS_SAP_MARA_BBA_BBN
+      - datasets/DS_SAP_T134T_BBA_BBL_BBN
+      outputs:
+      - datasets/MD_MATL
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_MD_MATL_BBL:
+    name: SAP_MD_MATL_BBL
+    description: MD Material for SAP systems with matching L0 schema and mapping
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-14 10:44:26'
+    modifiedAt: '2023-04-14 10:48:24'
     datasets:
       inputs:
       - datasets/DS_SAP_AUSP_01
