--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -627,13 +627,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-11 14:37:19'
-    modifiedAt: '2023-04-12 15:39:30'
+    modifiedAt: '2023-04-14 11:12:46'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4211
       - datasets/DS_JDE_01_F43121
       outputs:
-      - datasets/JDE_MD_DELV_LINE
+      - datasets/MD_DELV_LINE
     subgraphs: []
     dependencies: {}
   pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ:
@@ -1980,7 +1980,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-07 17:23:20'
+    modifiedAt: '2023-04-14 11:12:46'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
