--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -607,7 +607,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-11 14:58:12'
-    modifiedAt: '2023-04-11 15:51:58'
+    modifiedAt: '2023-04-14 12:07:42'
     datasets:
       inputs:
       - datasets/DS_SAP_01_VBAK
@@ -4874,6 +4874,31 @@ jobs:
     createdAt: '2023-03-30 16:54:04'
     modifiedAt: '2023-03-30 16:56:57'
     author: jcovezd1@its.jnj.com
+  jobs/JOB_MD_SLS_DOC_PTNR_FUNC_HM2:
+    name: JOB_MD_SLS_DOC_PTNR_FUNC_HM2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_SLS_DOC_PTNR_FUNC_HM2
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-14 12:08:25'
+    modifiedAt: '2023-04-14 12:09:00'
+    author: mbolado1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
