JEKT-1209 Created pipeline for TAI ❇️ New     - Pipeline        - SAP_MD_MATL_TAI
🔁 Modified
    - Pipeline
       - SAP_MD_MATL_BBL
    - Dataset
       - MD_MATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -682,7 +682,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-14 10:44:26'
-    modifiedAt: '2023-04-14 10:48:24'
+    modifiedAt: '2023-04-14 10:53:01'
     datasets:
       inputs:
       - datasets/DS_SAP_AUSP_01
@@ -691,6 +691,23 @@ pipelines:
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_BBA_BBN
       - datasets/DS_SAP_T134T_BBA_BBL_BBN
+      outputs:
+      - datasets/MD_MATL
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_MD_MATL_TAI:
+    name: SAP_MD_MATL_TAI
+    description: MD Material for SAP systems with matching L0 schema and mapping
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-14 12:21:22'
+    modifiedAt: '2023-04-14 12:27:13'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_MAKT_01
+      - datasets/DS_SAP_MARA_01
       outputs:
       - datasets/MD_MATL
     subgraphs: []
@@ -1841,7 +1858,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-14 09:42:02'
+    modifiedAt: '2023-04-14 12:24:13'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
