JEKT-1350 - ❇️ New     - Pipeline        - NGEM_MATERIAL_CROSS_REFERENCE        - JNJ_MATL     - Dataset        - DS_NGEM_MATERIAL_CROSS_REFERENCE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1424,6 +1424,35 @@ pipelines:
       - datasets/MD_MATL_INV
     subgraphs: []
     dependencies: {}
+  pipelines/NGEM_MATERIAL_CROSS_REFERENCE:
+    name: NGEM_MATERIAL_CROSS_REFERENCE
+    description: ''
+    author: smille29@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-14 17:26:37'
+    modifiedAt: '2023-04-14 18:38:26'
+    datasets:
+      inputs:
+      - datasets/DS_NGEM_MATERIAL_CROSS_REFERENCE
+      outputs: []
+    subgraphs: []
+    dependencies: {}
+  pipelines/JNJ_MATL:
+    name: JNJ_MATL
+    description: ''
+    author: smille29@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-14 19:09:04'
+    modifiedAt: '2023-04-14 19:09:17'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -7515,6 +7544,21 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-04-12 13:45:30'
         modifiedAt: '2023-04-12 13:45:30'
+  datasets/DS_NGEM_MATERIAL_CROSS_REFERENCE:
+    name: DS_NGEM_MATERIAL_CROSS_REFERENCE
+    description: ''
+    author: smille29@its.jnj.com
+    createdAt: '2023-04-14 17:30:43'
+    modifiedAt: '2023-04-14 17:30:43'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: smille29@its.jnj.com
+        createdAt: '2023-04-14 17:30:43'
+        modifiedAt: '2023-04-14 17:30:43'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
