JEKT-1350 - ❇️ New     - Dataset        - DS_SAP_01_CABN_JNJ        - DS_SAP_01_MAKT_JNJ        - DS_SAP_01_INOB_JNJ        - DS_SAP_01_T134T_JNJ        - DS_SAP_01_MARA_JNJ        - DS_SAP_01_AUSP_JNJ
🔁 Modified
    - Pipeline
       - JNJ_MATL
    - Dataset
       - MD_MATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1447,9 +1447,15 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-14 19:09:04'
-    modifiedAt: '2023-04-14 19:09:17'
+    modifiedAt: '2023-04-14 21:06:53'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_JNJ_MATL_MARA
+      - datasets/DS_SAP_01_AUSP_JNJ
+      - datasets/DS_SAP_01_CABN_JNJ
+      - datasets/DS_SAP_01_INOB_JNJ
+      - datasets/DS_SAP_01_MAKT_JNJ
+      - datasets/DS_SAP_01_T134T_JNJ
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -2599,7 +2605,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-14 19:16:15'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7559,6 +7565,96 @@ datasets:
         author: smille29@its.jnj.com
         createdAt: '2023-04-14 17:30:43'
         modifiedAt: '2023-04-14 17:30:43'
+  datasets/DS_JNJ_MATL_MARA:
+    name: DS_SAP_01_MARA_JNJ
+    description: ''
+    author: smille29@its.jnj.com
+    createdAt: '2023-04-14 19:30:41'
+    modifiedAt: '2023-04-14 19:43:25'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: smille29@its.jnj.com
+        createdAt: '2023-04-14 19:30:41'
+        modifiedAt: '2023-04-14 19:30:41'
+  datasets/DS_SAP_01_MAKT_JNJ:
+    name: DS_SAP_01_MAKT_JNJ
+    description: ''
+    author: smille29@its.jnj.com
+    createdAt: '2023-04-14 19:42:00'
+    modifiedAt: '2023-04-14 20:00:09'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: smille29@its.jnj.com
+        createdAt: '2023-04-14 19:42:00'
+        modifiedAt: '2023-04-14 19:42:00'
+  datasets/DS_SAP_01_AUSP_JNJ:
+    name: DS_SAP_01_AUSP_JNJ
+    description: ''
+    author: smille29@its.jnj.com
+    createdAt: '2023-04-14 19:49:40'
+    modifiedAt: '2023-04-14 19:51:20'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: smille29@its.jnj.com
+        createdAt: '2023-04-14 19:49:40'
+        modifiedAt: '2023-04-14 19:49:40'
+  datasets/DS_SAP_01_T134T_JNJ:
+    name: DS_SAP_01_T134T_JNJ
+    description: ''
+    author: smille29@its.jnj.com
+    createdAt: '2023-04-14 20:08:13'
+    modifiedAt: '2023-04-14 20:08:13'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: smille29@its.jnj.com
+        createdAt: '2023-04-14 20:08:13'
+        modifiedAt: '2023-04-14 20:08:13'
+  datasets/DS_SAP_01_INOB_JNJ:
+    name: DS_SAP_01_INOB_JNJ
+    description: ''
+    author: smille29@its.jnj.com
+    createdAt: '2023-04-14 20:43:45'
+    modifiedAt: '2023-04-14 20:43:46'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: smille29@its.jnj.com
+        createdAt: '2023-04-14 20:43:45'
+        modifiedAt: '2023-04-14 20:43:45'
+  datasets/DS_SAP_01_CABN_JNJ:
+    name: DS_SAP_01_CABN_JNJ
+    description: ''
+    author: smille29@its.jnj.com
+    createdAt: '2023-04-14 20:53:12'
+    modifiedAt: '2023-04-14 20:53:12'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: smille29@its.jnj.com
+        createdAt: '2023-04-14 20:53:12'
+        modifiedAt: '2023-04-14 20:53:12'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
