--- a/src/datasets/DS_SAP_01_INOB_JNJ/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_INOB_JNJ/pbt_aspects.yml
@@ -2,107 +2,163 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: SRC_SYS_CD
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BNS_RSN_ID
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BNS_RSN_DESC
+  - name: MANDT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BNS_RSN_NM
+  - name: CUOBJ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CHG_CNT
-    type: integer
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CHG_HIST_ID
+  - name: KLART
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ICON_ID
+  - name: OBTAB
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: IS_FRZN_IND
-    type: boolean
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NOTES_TXT
+  - name: OBJEK
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: OBJ_TYPE_ID
+  - name: ROBTAB
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l0_upt_
+  - name: ROBJEK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CLINT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: STATU
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CUCOZHL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PARENT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ROOT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EXPERTE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DATUV
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TECHS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _pk_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _upt_
     type: timestamp
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_ETL_ID
-    type: integer
-    nullable: false
+  - name: _kafkaOffset_
+    type: long
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l1_upt_
+  - name: _createTime_
     type: timestamp
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_CRT_DTTM
+  - name: _kafkaTimestamp_
     type: timestamp
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_UPDT_DTTM
-    type: timestamp
-    nullable: false
+  - name: _infa_bigint_sequence_
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
