❇️ JEKT-1367     - Dataset        - DS_SAP_01_TVAST        - DS_SAP_01_T016T
🔁 Modified
    - Pipeline
       - SAP_01_MD_CUST
    - Dataset
       - DS_SAP_01_KNA1

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,10 +20,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-15 17:35:18'
-    modifiedAt: '2023-04-15 18:39:04'
+    modifiedAt: '2023-04-15 18:58:25'
     datasets:
       inputs:
       - datasets/DS_SAP_01_KNA1
+      - datasets/DS_SAP_01_T016T
+      - datasets/DS_SAP_01_TVAST
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -33,7 +35,7 @@ datasets:
     description: ''
     author: hgermi1@its.jnj.com
     createdAt: '2023-04-15 17:41:10'
-    modifiedAt: '2023-04-15 17:41:10'
+    modifiedAt: '2023-04-15 18:42:55'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -43,6 +45,36 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-15 17:41:10'
         modifiedAt: '2023-04-15 17:41:10'
+  datasets/DS_SAP_01_TVAST:
+    name: DS_SAP_01_TVAST
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-04-15 18:54:15'
+    modifiedAt: '2023-04-15 18:54:15'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-04-15 18:54:15'
+        modifiedAt: '2023-04-15 18:54:15'
+  datasets/DS_SAP_01_T016T:
+    name: DS_SAP_01_T016T
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-04-15 18:55:51'
+    modifiedAt: '2023-04-15 18:55:51'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-04-15 18:55:51'
+        modifiedAt: '2023-04-15 18:55:51'
 templates: {}
 jobs: {}
 functions:
